--- a/sentiment_map/timedate_plots.Rmd
+++ b/sentiment_map/timedate_plots.Rmd
@@ -52,6 +52,9 @@ tweets <- tweets %>%
   mutate(date = as_datetime(created_at/1000, tz = "Asia/Singapore")) %>%
   mutate(weekday = wday(date))
 insta <- invisible(read_csv("instagram_trunc.csv"))
+insta <- insta %>%
+  mutate(date = as_datetime(created_at)) %>%
+  mutate(weekday = wday(date))
 shape <- invisible(readOGR(dsn = 'sg-shape', layer ='sg-all'))
 shape <- gBuffer(shape, byid=TRUE, width=0) # clean up polygons
 ```
@@ -270,7 +273,9 @@ ggplotly(p, tooltip = "text") %>%
     opacityDim = 1
   )
 ```
-  
+
+We can observe that Singaporeans are marginally happier on weekends compared to weekdays. Generally, social media sentiments are more negative in industrial areas compared to residential areas, and do not change much regardless of the day. We can also notice a change from sad to happy in recreational areas such as East Coast Park and Orchard Road.
+
   
 **Case 2: Sentiments across various Time Periods** 
 
@@ -714,3 +719,10 @@ ggplotly(p, tooltip = "text") %>%
     opacityDim = 1
   )
 ```
+
+**Some general observations that we can make based on time periods:**
+
+*Singaporeans are happiest on social media from 12:00 - 17:59.
+*From 18:00 - 23:59, residential areas remain largely happy, whereas the industrial areas (South and West parts of Singapore) are least happy (probably due to the need to work overtime).
+*From 00:00 - 05:59, sentiments are largely unhappy, with small “happy” clusters around Choa Chu Kang, Ang Mo Kio, Geylang, Bedok and Tampines areas (possibly areas with 24/7 food options, and other night activities).
+*The east remains happy regardless of time period, I wonder why.
